--- a/responsive.css
+++ b/responsive.css
@@ -1,1 +1,779 @@
+@media(max-width:1880px){
+
+}
+@media(max-width:1536px){
+
+}
+
+
+
+
+@media (max-width: 1440px) {
+    .contactImg {
+        margin-bottom: -91px;
+    }
+    .headerSideImg img {
+        margin-bottom: -76px;
+    }
+}
+@media(max-width:1400px){
+
+}
+@media(max-width:1366px){
+
+}
+
+
+@media (max-width: 1024px) {
+    header.headerBg {
+        padding: 14% 0% 8%;
+        margin-top: -9%;
+    }
+    .navLinks li a {
+        font-size: 15px;
+    }
+    .mainHeading h1 {
+        font-size: 38px;
+    }
+    .headerSideImg img {
+        max-width: 364px;
+        margin-bottom: -85px;
+    }
+    .ctaBtn a {
+        font-size: 17px;
+        padding: 12px 22px;
+    }
+    .FeatBox {
+        width: 25%;
+        box-shadow: rgba(0, 0, 0, 0.09) 0px 3px 12px;
+        margin: 10px;
+        text-align: center;
+        padding: 18px 10px;
+        border-radius: 10px;
+    }
+    .FeatBox img {
+        max-width: 50px;
+    }
+    .FeatBox h6 {
+        font-size: 22px;
+    }
+    .FeatBox p {
+        font-size: 14px;
+    }
+    .aboutFeactBox {
+        justify-content: end;
+    }
+    .sectHeadingBox h2 {
+        font-size: 32px;
+        margin-bottom: 18px;
+    }
+    .abtCont h5 {
+        font-size: 28px;
+        margin-bottom: 14px;
+    }
+    .servBox h4 {
+        font-size: 22px;
+        margin-bottom: 15px;
+    }
+    .servBox p {
+        font-size: 16px;
+        margin-bottom: 12px;
+    }
+    .serBox1 {
+        padding: 30px 25px;
+        height: 200px;
+    }
+    .ctaBtn h5 {
+        font-size: 28px;
+        margin: 0px 30px;
+    }
+    .prjtContent h4 {
+        font-size: 28px;
+    }
+    .optcBox h5 {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+    .optcBox {
+        background: rgb(255 255 255 / 39%);
+        width: 100%;
+        max-width: 500px;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: rgb(0 0 0 / 11%) 0px 1px 4px 1px;
+        background: #ffffff30;
+    }
+    .industryBox p {
+        font-size: 18px;
+    }
+    .testiCont {
+        max-width: 500px;
+    }
+    .testiRight p {
+        font-size: 17px;
+        font-weight: 300;
+        line-height: 1.6;
+    }
+    figure.testimonial img {
+        max-width: 80px;
+    }
+    figure.testimonial .peopl h3 {
+        font-size: 18px;
+    }
+    .testiRight h3 {
+        font-size: 28px;
+        margin-bottom: 10px;
+    }
+    .contactBtn {
+        font-size: 18px;
+    }
+    .accordion .label {
+        font-size: 22px;
+    }
+    .accordion .accrd.active .content {
+        font-size: 17px;
+    }
+    .footerheading h5 {
+        font-size: 26px;
+    }
+    .footerheading p a {
+        font-size: 16px;
+    }
+    .footerheading p {
+        font-size: 16px;
+    }
+    .copyryt p {
+        font-size: 16px;
+    }
+    figure.testimonial blockquote {
+        font-size: 16px;
+    }
+    .topBar img {
+        max-width: 40px;
+    }
+    .contactImg {
+        max-width: 439px;
+    }
+}
+@media(max-width:960px){
+
+}
+@media(max-width:820px){
+
+}
+@media (min-width: 769px) {
+    .closenv {
+        display: none !important;
+    }
+    .nvList {
+        display: none !important;
+    }
+}
+
+@media (max-width: 768.9px) {
+    .row {
+        display: block;
+    }
+    .col-1,
+    .col-2,
+    .col-3,
+    .col-4,
+    .col-5,
+    .col-6,
+    .col-7,
+    .col-8,
+    .col-9,
+    .col-10,
+    .col-11,
+    .col-12 {
+        flex: 100%;
+    }
+    .nvList {
+        display: none;
+    }
+    .serBox1 {
+        height: auto;
+    }
+    .navLinks {
+        flex-direction: column;
+        position: absolute;
+        right: 0px;
+        background: #050748;
+        box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+        top: 66px;
+    }
+    .navLinks li {
+        padding: 15px 35px;
+        border-bottom: 1px solid #c4c4c4;
+    }
+    .navLinks li a {
+        font-size: 13px;
+        color: #ffffff;
+    }
+    .navLinks li a:hover .navLinks li {
+        background-color: #fff;
+    }
+    header.headerBg {
+        padding: 21% 0% 5%;
+        margin-top: -15%;
+    }
+    .headerSideImg {
+        text-align: end;
+    }
+    /* .logo p {
+    font-size: 24px;
+  } */
+    .mainHeading h1 {
+        font-size: 36px;
+    }
+    .mainHeading p {
+        font-size: 16px;
+        line-height: 1.4;
+    }
+    .headerSideImg img {
+        max-width: 290px;
+        margin-bottom: -42px;
+    }
+    .ctaBtn a {
+        font-size: 15px;
+        padding: 10px 20px;
+    }
+    .sectHeadingBox h2 {
+        font-size: 32px;
+        margin-bottom: 10px;
+    }
+    .col-6.mainHeading.aln-cntr {
+        width: 100%;
+        max-width: 80%;
+    }
+    .sectHeadingBox {
+        text-align: center;
+        margin-bottom: 25px;
+    }
+    .abtCont {
+        text-align: center;
+    }
+    .aboutFeactBox {
+        justify-content: center;
+        margin: 30px 0px;
+    }
+    .servBox a {
+        font-size: 16px;
+    }
+    .ctaBtn h5 {
+        font-size: 26px;
+    }
+    .prjtContent h4 {
+        font-size: 24px;
+    }
+    .prjtcTitle span {
+        padding: 5px 11px;
+    }
+    .optcBox h5 {
+        font-size: 20px;
+    }
+    .optcBox ul li {
+        font-size: 16px;
+    }
+    .liveDemo a {
+        font-size: 16px;
+        padding: 8px 12px;
+    }
+    .industryBox img {
+        max-width: 30px;
+    }
+    .industryBox {
+        padding: 12px 15px;
+    }
+    .col-5.testiRight.aln-cntr {
+        text-align: center;
+        display: none;
+    }
+    .testiRight p {
+        font-size: 16px;
+        line-height: 1.4;
+    }
+    .testiCont {
+        margin: auto;
+    }
+    .contactImg {
+        display: none;
+    }
+    .inputStyle {
+        margin: auto;
+        margin-bottom: 20px;
+        padding: 12px 15px;
+        font-size: 15px;
+    }
+    .contactBtn {
+        margin: auto;
+        padding: 10px 45px;
+    }
+    .accordion .label {
+        font-size: 18px;
+    }
+    .accordion .accrd.active .content {
+        font-size: 15px;
+        line-height: 1.4;
+    }
+    .accordion .accrd.active .label::before {
+        font-size: 26px;
+        font-weight: 400;
+    }
+    .accordion .label::before {
+        font-size: 22px;
+        font-weight: 400;
+    }
+    .accordion .accrd.active .content {
+        padding: 10px 15px;
+    }
+    .footerheading {
+        text-align: center;
+        margin-bottom: 35px;
+    }
+    .footerFlex {
+        display: flex;
+        justify-content: center;
+    }
+    .footerheading p a {
+        font-size: 16px;
+        margin: 0px 10px;
+        font-size: 14px;
+    }
+    .footerRow {
+        padding-bottom: 0px;
+        width: 100%;
+        max-width: 85%;
+        margin: auto;
+    }
+    .footerheading h5 {
+        font-size: 22px;
+    }
+    .displayMbl {
+        display: block;
+    }
+    .displayDesktop {
+        display: none;
+    }
+    .ptb-5 {
+        padding: 9% 0%;
+    }
+    p.indentity {
+        font-size: 14px;
+    }
+    .prjtcOne {
+        display: block;
+    }
+    .prjtImg.displayMbl {
+        margin: 50px 0px 30px;
+        display: block;
+    }
+    .serBox1.clrBlue {
+        width: 100%;
+        max-width: 67%;
+    }
+    .serBox1.clrRed {
+        width: 100%;
+        max-width: 75%;
+    }
+    .serBox1.clrLightBlue {
+        width: 100%;
+        max-width: 82%;
+    }
+    .serBox1.clrYllw {
+        width: 100%;
+        max-width: 90%;
+    }
+    .serBox1 {
+        margin: 30px auto;
+        box-shadow: rgb(0 0 0 / 36%) 2px 3px 4px -1px;
+    }
+    .servImg img {
+        max-width: 190px;
+    }
+    .img2 {
+        max-width: 180px !important;
+    }
+    .img3 {
+        max-width: 180px !important;
+    }
+    .img4 {
+        max-width: 207px !important;
+    }
+    .projectCont {
+        text-align: center;
+        width: 100%;
+        max-width: 500px;
+        margin: 40px auto;
+    }
+    .projectContent h3 {
+        font-size: 26px;
+    }
+    .projectContent p {
+        font-size: 16px;
+    }
+    .accordion .accrd {
+        margin: 10px 0px;
+    }
+}
+@media(max-width:620px){
+
+}
+@media(max-width:560px){
+
+}
+
+@media (max-width: 550px) {
+    header.headerBg {
+        padding: 21% 0% 0%;
+        margin-top: -17%;
+    }
+    .headerSideImg img {
+        margin-bottom: -3px;
+    }
+    .sectHeadingBox h2 {
+        font-size: 30px;
+    }
+    .sectHeadingBox {
+        margin-bottom: 18px;
+    }
+    .FeatBox {
+        width: 29%;
+    }
+    .serBox1 {
+        margin: 25px auto;
+        box-shadow: rgb(0 0 0 / 36%) 2px 3px 2px -2px;
+        max-width: 100% !important;
+    }
+    .ctaBtn h5 {
+        margin-bottom: 15px;
+    }
+    .industryBox {
+        margin: 8px;
+    }
+    .induBox {
+        max-width: 60%;
+        margin: auto;
+    }
+    .accordion {
+        padding: 15px 0px;
+    }
+    .industryBox p {
+        padding-left: 6px;
+    }
+    .industryBox p {
+        font-size: 16px;
+    }
+    .industryBox {
+        padding: 10px 8px;
+    }
+    .servImg img {
+        max-width: 150px;
+    }
+    .img4 {
+        max-width: 230px !important;
+    }
+    .img2 {
+        max-width: 165px !important;
+    }
+    .projectCont {
+        padding: 20px 20px 0px;
+    }
+    .servBox p {
+        font-size: 14px;
+    }
+    .footerRow {
+        max-width: 100%;
+    }
+    .navLinks li {
+        padding: 10px 20px;
+    }
+    .ctaBtn a {
+        margin: auto;
+    }
+}
+
+
+
+@media (max-width: 428px) {
+    .col-6.mainHeading.aln-cntr {
+        max-width: 85%;
+    }
+    header.headerBg {
+        padding: 25% 0% 0%;
+    }
+    .mainHeading h1 {
+        font-size: 30px;
+    }
+    .headerSideImg img {
+        max-width: 240px;
+    }
+    .ptb-5 {
+        padding: 12% 0%;
+    }
+    .sectHeadingBox h2 {
+        font-size: 26px;
+    }
+    .FeatBox {
+        width: 37%;
+    }
+    .ctaBtn h5 {
+        font-size: 20px;
+        margin: 0px 0px 20px;
+        text-align: center;
+    }
+    .servBox h4 {
+        font-size: 20px;
+    }
+    .logo p {
+        font-size: 24px;
+    }
+    .abtCont h5 {
+        font-size: 24px;
+    }
+    figure.testimonial blockquote {
+        font-weight: 400;
+        font-size: 14px;
+    }
+    figure.testimonial {
+        margin: 10px 0%;
+        padding: 0 15px;
+    }
+    .slick-prev:before,
+    .slick-next:before {
+        font-size: 15px;
+        padding: 8px 6px;
+    }
+    figure.testimonial img {
+        max-width: 65px;
+    }
+    .slick-prev {
+        right: 102px;
+    }
+    figure.testimonial .peopl {
+        bottom: 23px;
+        padding: 0 10px 0 83px;
+    }
+    .slick-prev,
+    .slick-next {
+        bottom: 6%;
+    }
+    .slick-next {
+        right: 27px;
+    }
+    .slick-prev {
+        right: 56px;
+    }
+    .slick-prev:before,
+    .slick-next:before {
+        border-radius: 4px;
+    }
+    .sectHeadingBox {
+        margin-bottom: 0px;
+    }
+    .accordion .label {
+        margin: 0px;
+    }
+    .servImg img {
+        display: none;
+    }
+    .projectContent h3 {
+        font-size: 20px;
+    }
+    .mb-40 {
+        margin-bottom: 20px;
+    }
+    .projectCont {
+        margin: 30px auto;
+    }
+    .servBox a {
+        font-size: 14px;
+    }
+    .abtCont p {
+        font-size: 14px;
+        line-height: 1.4;
+        margin-bottom: 10px;
+    }
+    .projectContent p {
+        font-size: 14px;
+    }
+    .accordion .accrd.active .content {
+        font-size: 12px;
+        line-height: 1.4;
+    }
+    .dFlex {
+        flex-direction: column;
+    }
+    .navLinks {
+        top: 60px;
+    }
+}
+
+@media (max-width: 375.9px) {
+    .mainHeading h1 {
+        font-size: 26px;
+        margin-bottom: 12px;
+    }
+    .navLinks {
+        top: 50px;
+    }
+    .navbarCont {
+        padding: 10px 0px;
+    }
+    .headerSideImg img {
+        max-width: 200px;
+    }
+    .sectHeadingBox h2 {
+        font-size: 22px;
+    }
+    .FeatBox h6 {
+        font-size: 18px;
+    }
+    .FeatBox img {
+        max-width: 40px;
+    }
+    .abtCont h5 {
+        font-size: 20px;
+    }
+    .servBox h4 {
+        font-size: 18px;
+        margin-bottom: 12px;
+    }
+    .serBox1 {
+        padding: 15px 20px;
+    }
+    .servBox p {
+        font-size: 12px;
+        margin-bottom: 8px;
+    }
+    .servImg img {
+        max-width: 120px;
+    }
+    .prjtcOne {
+        padding: 20px;
+    }
+    .optcBox h5 {
+        font-size: 18px;
+    }
+    .optcBox ul li {
+        margin: 0px 5px;
+    }
+    .liveDemo a {
+        font-size: 14px;
+        padding: 8px 10px;
+    }
+    .prjtContent h4 {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+    .prjtcTitle span {
+        background: #fff;
+        padding: 5px 11px;
+        font-size: 12px;
+        margin: 0px 2px;
+        border-radius: 5px;
+    }
+    .prjtcTitle {
+        margin-bottom: 10px;
+    }
+    .induBox {
+        max-width: 80%;
+    }
+    .industryBox {
+        padding: 10px 10px;
+    }
+    figure.testimonial .peopl h3 {
+        font-size: 16px;
+    }
+    p.indentity {
+        font-size: 12px;
+    }
+    .inputStyle {
+        margin-bottom: 12px;
+        padding: 10px 10px;
+        font-size: 14px;
+    }
+    .contactBtn {
+        margin: auto;
+        padding: 8px 35px;
+    }
+    .accordion .label {
+        font-size: 16px;
+    }
+    .footerheading p {
+        font-size: 14px;
+    }
+    .footerFlex {
+        display: block;
+    }
+    .footerheading h5 {
+        font-size: 20px;
+    }
+    .copyryt p {
+        font-size: 12px;
+    }
+    .topBar img {
+        max-width: 30px;
+        right: 10px;
+    }
+    header.headerBg {
+        margin-top: -18%;
+    }
+    .container {
+        padding: 0px 10px;
+    }
+    .pt-30 {
+        padding-top: 5px;
+    }
+    .projectContent p {
+        font-size: 14px;
+    }
+    .mainHeading p {
+        font-size: 12px;
+        line-height: 1.6;
+    }
+    .ctaBtn a {
+        font-size: 13px;
+        padding: 10px 20px;
+    }
+    .navLinks li a {
+        font-size: 11px;
+    }
+    .navLinks li {
+        padding: 10px 15px;
+    }
+}
+
+@media (max-width: 320.9px) {
+    .mainHeading h1 {
+        font-size: 24px;
+    }
+    .FeatBox {
+        width: 40%;
+    }
+    figure.testimonial img {
+        max-width: 50px;
+    }
+    figure.testimonial img {
+        max-width: 50px;
+    }
+    .ctaBtn h5 {
+        font-size: 18px;
+        margin: 0px 10px 20px;
+        text-align: center;
+    }
+    .sectHeadingBox p {
+        font-size: 14px;
+    }
+    figure.testimonial .peopl {
+        padding: 0 10px 0 65px;
+    }
+    .logo p {
+        font-size: 22px;
+    }
+    .sectHeadingBox p {
+        font-size: 12px;
+        margin-bottom: 4px;
+    }
+}
 
